Layout bugfixes

--- a/src/desktop/src/components/UI/Button.css
+++ b/src/desktop/src/components/UI/Button.css
@@ -135,7 +135,7 @@ footer .button + .button {
 .loading {
     pointer-events: none;
     padding: 0 12px 0 36px;
-    box-shadow: inset 0 0 0 30px rgba(0, 0, 0, 0.1);
+    box-shadow: inset 0 0 0 30px var(--color-hover);
     &:before {
         transition: all 0.8s cubic-bezier(0.55, 0, 0.1, 1);
         opacity: 1;
