--- a/src/desktop/src/guide/index.css
+++ b/src/desktop/src/guide/index.css
@@ -33,7 +33,8 @@
         hr {
             background: none;
             border: none;
-            border-top: 1px solid var(--color-bgSecondary);
+            border-top: 1px solid var(--body-secondary);
+            margin-bottom: 20px;
         }
 
         select {
@@ -53,7 +54,7 @@
 
         hr {
             border: none;
-            border-top: 1px dashed var(--color-bgSecondary);
+            border-top: 1px dashed var(--body-secondary);
             margin: 30px 0;
         }
     }
